
cmake_minimum_required(VERSION 2.8)

project(hello-world)
add_executable(hello-world ./src/hello-world.c)

project(values)
add_executable(values ./src/values.c)

project(variables)
add_executable(variables ./src/variables.c)

project(constants)
add_executable(constants ./src/constants.c)

project(for)
add_executable(for ./src/for.c)

project(if-else)
add_executable(if-else ./src/if-else.c)

project(switch)
add_executable(switch ./src/switch.c)

project(arrays)
add_executable(arrays ./src/arrays.c)

project(functions)
add_executable(functions ./src/functions.c)

project(recursion)
add_executable(recursion ./src/recursion.c)

project(pointers)
add_executable(pointers ./src/pointers.c)

